fix: textare scrollbar

--- a/web/src/styles/sparkta-ui/components/c-textarea/_rules.scss
+++ b/web/src/styles/sparkta-ui/components/c-textarea/_rules.scss
@@ -1,11 +1,55 @@
 @mixin c-textarea {
 	@include c-input;
 
+	font-family: 'bariol-regular';
+    font-size: 1rem;
+	background-color: $c-textarea--background-color;
+	color: $c-textarea--color;
+	border-top: $c-textarea--border-top;
+	border-left: $c-textarea--border-left;
+	border-right: $c-textarea--border-right;
+	border-bottom: $c-textarea--border-bottom;
 	min-height: $c-textarea--min-height;
+	width: $c-textarea--width;
+	resize: $c-textarea--resize;
+
+	&::-moz-placeholder {
+		color: getColor(n7);
+		font-style: italic;
+	}
+
+  	&::-webkit-input-placeholder {
+  		color: getColor(n7);
+  		font-style: italic;
+  	}
+
+  	&:-ms-input-placeholder {
+  		color: getColor(n7);
+  		font-style: italic;
+  	}
+
+  	&:focus {
+		outline-width: 0;
+		border-bottom-color: getColor(n9);
+  	}
 
 	&--big {
 		min-height: $c-textarea--big--min-height;
 	}
+
+	&::-webkit-scrollbar {
+      width: 7px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #cccccc;
+      border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #707070;
+      border-radius: 10px;
+    }
 
   &--error{
     border-color:$c-textarea--error--border-color ;
