--- a/web/src/styles/sparkta-ui/components/c-textarea/_vars.scss
+++ b/web/src/styles/sparkta-ui/components/c-textarea/_vars.scss
@@ -1,3 +1,11 @@
+$c-textarea--background-color: transparent !default;
+$c-textarea--color: getColor(n10) !default;
+$c-textarea--border-top: 1px solid #e1e1e1 !default;
+$c-textarea--border-left: 1px solid getColor(n2) !default;
+$c-textarea--border-right: 1px solid getColor(n2) !default;
+$c-textarea--border-bottom: 1px solid  #9a9a9a !default;
+$c-textarea--resize: none !default;
 $c-textarea--min-height: 100px !default;
+$c-textarea--width: 100%;
 $c-textarea--big--min-height: 300px !default;
 $c-textarea--error--border-color: red;
